force-app/main/default/objects/Nimbus_Account__c/Nimbus_Account__c.object-meta.xml
<CustomObject>
    <description>Synthetic Nimbus customer account. No real PII.</description>
    <label>Nimbus Account</label>
    <nameField>
        <displayFormat>NA-{00000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nimbus Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>