force-app/main/default/objects/Nimbus_Account__c/fields/Current_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer's currently subscribed Nimbus plan.</description>
    <label>Current Plan</label>
    <referenceTo>Nimbus_Plan__c</referenceTo>
    <relationshipLabel>Subscribers</relationshipLabel>
    <relationshipName>Subscribers</relationshipName>
    <type>Lookup</type>
</CustomField>