force-app/main/default/objects/Nimbus_Account__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Synthetic customer full name.</description>
    <label>Customer Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>