force-app/main/default/objects/Nimbus_Account__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Synthetic contact email.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>